--- a/Web/Pages/Shared/_Layout.cshtml
+++ b/Web/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿@inject IConfiguration Configuration
+@inject Web.Services.IVersionService VersionService
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -89,16 +90,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@800&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" />
-    <link id="prism-theme" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism.min.css" />
-    
-    <!-- Site CSS -->
+    <link id="prism-theme" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism.min.css" />    <!-- Site CSS -->
     <environment exclude="Development">
-        <link rel="stylesheet" href="~/css/bundle.min.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/css/bundle.min.css?v=@VersionService.GetVersion()" />
     </environment>
     <environment include="Development">
         <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
         <link rel="stylesheet" href="~/css/layout.css" asp-append-version="true" />
-    </environment>    <link rel="stylesheet" href="~/Web.styles.css" asp-append-version="true" />
+    </environment><link rel="stylesheet" href="~/Web.styles.css" asp-append-version="true" />
     @await RenderSectionAsync("Styles", required: false)
 
     <!-- Google Analytics - Production Only -->
@@ -192,7 +191,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-bash.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-yaml.min.js"></script>    <!-- Site scripts -->
     <environment exclude="Development">
-        <script src="~/js/bundle.min.js" asp-append-version="true"></script>
+        <script src="~/js/bundle.min.js?v=@VersionService.GetVersion()"></script>
     </environment>
     <environment include="Development">
         <script src="~/js/site.js" asp-append-version="true"></script>
